Give splitters a high z-index on FF, low on IE, so that FF correctly shows splitter focus, but that on IE the splitters don't cover up the borders of panes.
Also fixes problem seen in themeTester.html  (non-active sizing) where the splitter being dragged appears behind the stationary splitters.

ISTM that FF/high-contrast focus on splitters is still very difficult to see though, both before and after this change.

Refs #6438, #7583.


git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@16064 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -707,12 +707,14 @@ body .dijitAlignClient { position: absolute; }
 .dijitSplitter {
 	position: absolute;
 	overflow: hidden;
-	z-index: 1;		/* behind the panes */
+	z-index: 10;		/* above the panes so that splitter focus is visible on FF, see #7583*/
 	background-color: #fff;
 	border-color: gray;
 	border-style: solid;
 	border-width: 0;
-	z-index: 11;
+}
+.dj_ie .dijitSplitter {
+	z-index: 1;	/* behind the panes so that pane borders aren't obscured see test_Gui.html/[14392] */
 }
 
 .dijitSplitterActive {
